[gd_scene format=3 uid="uid://lw0tr0fagg0d"]

[ext_resource type="Script" uid="uid://pfhpiio26lvi" path="res://scenes/ui/animations/start_turn_animation.gd" id="1_v3che"]
[ext_resource type="Theme" uid="uid://bsa4ociwyndea" path="res://resources/themes/game_theme.tres" id="1_yyda8"]

[node name="StartTurnAnimation" type="Control" unique_id=1913770978]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yyda8")
script = ExtResource("1_v3che")

[node name="Banner" type="PanelContainer" parent="." unique_id=1184479743]
custom_minimum_size = Vector2(250, 80)
layout_mode = 1
offset_right = 250.0
offset_bottom = 40.0
theme_type_variation = &"StartTurnPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="Banner" unique_id=6061082]
layout_mode = 2

[node name="TitleLabel" type="RichTextLabel" parent="Banner/HBoxContainer" unique_id=179802819]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StartTurnLabel"
text = "New Turn:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TeamLabel" type="RichTextLabel" parent="Banner/HBoxContainer" unique_id=304052839]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StartTurnLabel"
text = "Blue team"
vertical_alignment = 1
